FIX .error__wrap right arrows

--- a/css/screen.css
+++ b/css/screen.css
@@ -640,8 +640,8 @@ a { color: #00919e; }
 .popup__row.error .input:focus { border: 1px solid #f14159; -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; border-color: #f2415a; -webkit-box-shadow: inset 0 1px 4px rgba(38, 39, 40, 0.61); -moz-box-shadow: inset 0 1px 4px rgba(38, 39, 40, 0.61); box-shadow: inset 0 1px 4px rgba(38, 39, 40, 0.61); }
 .popup__row.error .error__help { position: absolute; top: -20px; left: -315px; border: 1px solid #9c0021; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; background-color: #f2415a; -webkit-box-shadow: 0 8px 16px rgba(11, 23, 34, 0.82), inset 0 1px 0 rgba(255, 255, 255, 0.7); -moz-box-shadow: 0 8px 16px rgba(11, 23, 34, 0.82), inset 0 1px 0 rgba(255, 255, 255, 0.7); box-shadow: 0 8px 16px rgba(11, 23, 34, 0.82), inset 0 1px 0 rgba(255, 255, 255, 0.7); width: 300px; z-index: 1005; color: #fff; font-size: 18px; font-weight: normal; font-style: normal; font-family: 'cuprumregular'; }
 .popup__row.error .error__wrap { height: 100%; position: relative; padding: 20px 10px 20px 20px; }
-.popup__row.error .error__wrap:before { position: absolute; top: 35px; right: -11px; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 10px 0 10px 11px; border-color: transparent transparent transparent #9a1230; }
-.popup__row.error .error__wrap:after { position: absolute; top: 35px; right: -10px; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 10px 0 10px 11px; border-color: transparent transparent transparent #f24158; }
+.popup__row.error .error__wrap:before { position: absolute; top: 35px; right: -11px; left: auto; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 10px 0 10px 11px; border-color: transparent transparent transparent #9a1230; }
+.popup__row.error .error__wrap:after { position: absolute; top: 35px; right: -10px; left: auto; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 10px 0 10px 11px; border-color: transparent transparent transparent #f24158; }
 
 .popup__info { line-height: 50px; height: 50px; }
 .popup__info a { float: left; font-size: 14px; display: inline-block; vertical-align: middle; }
