--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2082,6 +2082,7 @@
             position: absolute;
             top: 35px;
             right: -11px;
+            left: auto;
             content: "";
             width: 0px;
             height: 0px;
@@ -2093,6 +2094,7 @@
             position: absolute;
             top: 35px;
             right: -10px;
+            left: auto;
             content: "";
             width: 0px;
             height: 0px;
